Fixed spacing issue on top in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,13 @@ h1 {
 	margin-top: 2em;
 }
 
+/* removes extra spacing on top */
+@media (max-width: 550px) {
+	.container {
+		margin-top: 0;
+	}
+}
+
 h1, h2, h3, h4, h5 {
 	color: #666;
 	font-family: "Nunito Sans", sans-serif;
@@ -275,6 +282,13 @@ a:hover {
 .nav-plug {
 	padding-top: 3.1em;
 	padding-left: 2em;
+}
+
+/* removes empty top block if in mobile mode */
+@media (max-width: 550px) {
+	.nav-plug {
+		display: none;
+	}
 }
 
 .small-plug-nav {
@@ -379,8 +393,6 @@ code {
 /*
 	d3.js
 */
-
-#canvas {}
 
 .canvas-title {
 	color: #666;
